# rust-parser

./: .gitignore  .gitmodules  Cargo.toml  README.md  output.txt
docs/: EXPERIMENTAL.md  MAPPING.md  NOTE.md  README.md  grammar.json  node-types.json
examples/: constant.rs  extern_block.rs  extern_crate.rs  hello.rs  number.rs  static.rs  struct.rs  unions.rs
examples/attributes/: meta_item.rs  simple.rs
examples/enums/: discriminator.rs  simple.rs
examples/expressions/: block.rs  closure.rs  field_access.rs  function_call.rs  literal.rs  method_call.rs  operator.rs  struct.rs  tuple.rs
examples/functions/: all.rs  diverging.rs  hof.rs
examples/generics/: all.rs  const_generic.rs  impl.rs  multi_bound.rs  trait.rs  where.rs
examples/impl/: inherent_impl.rs  trait_impl.rs
examples/lifetime/: higher_ranked_lifetime.rs  lifetime_bound.rs
examples/macro_rules/: dry.rs  dsl.rs  simple.rs  variadics.rs
examples/modules/: struct_visibility.rs  super_self.rs  visibility.rs
examples/paths/: canonical_path.rs  path_in_expression.rs  qualified_path.rs  (+1 more)
parser/: Cargo.toml
parser/docs/: MAPPING.md  rust-analyzer.txt
parser/src/: cli.rs  main.rs
parser/src/parse/: parse_syn.rs
parser/tests/examples/: struct.rs
parser/tests/examples/expressions/: array.rs  range.rs
parser/tests/examples/expressions/loop/: for_iter.rs
parser/tests/examples/expressions/match/destructuring/: array.rs
parser/tests/examples/functions/: methods.rs  simple.rs
parser/tests/examples/functions/closures/: as_input_parameters.rs
parser/tests/examples/generics/: bound.rs
parser/tests/examples/impl/: argument_type.rs
parser/tests/examples/modules/: simple.rs
parser/tests/examples/traits/: associated_constants.rs  operator_overloading.rs
parser/tests/examples/type_system/: numeric.rs  tuple.rs
parser/tests/examples/use_declarations/: simple.rs  undescrore_import.rs
rust-parser/: Cargo.toml  err.txt
src/: ast.rs  cli.rs  main.rs  utils.rs
tests/examples/: Cargo.toml  comments.rs  extern_block.rs  unsafe.rs
tests/examples/expressions/: grouped.rs  path.rs  return.rs  underscore.rs
tests/examples/expressions/loop/: loop.rs
tests/examples/functions/closures/: capturing.rs  input_functions.rs
tests/examples/generics/: function.rs
tests/examples/impl/: return_type.rs
tests/examples/lifetime/: lifetime_bound.rs
tests/examples/macro_rules/syntax/: designators.rs  repeat.rs
tests/examples/modules/: use.rs
tests/examples/patterns/: grouped.rs  rest.rs
tests/examples/patterns/destructuring/: array.rs
tests/examples/special/: weird_expression.rs
tests/examples/traits/: dyn.rs  iterator.rs  super_trait.rs
tests/examples/type_system/: array.rs  closure.rs  impl_trait.rs  trait_object.rs
tests/examples/types/: inference.rs  literals.rs
(+68 files in other folders)
