[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.5.17"
syn = { version = "2.0.77", features = ["full", "extra-traits"] }

[build-dependencies]
cc="*"
