[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.5.17"
syn = { version = "2.0.77", features = ["full", "extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
cc="*"

[lib]
proc-macro = true
